implement update book by put and patch and delete book
